# EpsonImpactPrinterWithHWAsan

./: 1_20_1500 crash log with epos2.txt  Epos2Log 2026-01-28.txt
2026-03-23/: Epos2Log 2026-3-23.txt
2026-04-02/: README.md  autoSend.py
ePOS2_Printer/: Crash_Setps.md  Crash_Steps.md  build.gradle  crash-log.txt  local.properties  tombstone_24
ePOS2_Printer/app/: build.gradle
ePOS2_Printer/app/src/main/: AndroidManifest.xml
ePOS2_Printer/app/src/main/assets/: wrap.sh
ePOS2_Printer/app/src/main/cpp/: CMakeLists.txt  hwasan_test.cpp
ePOS2_Printer/app/src/main/java/com/epson/epos2_printer/: DiscoveryActivity.java  FirmwareUpdateActivity.java  HWASanTestHelper.java  MainActivity.java  PrinterSettingExActivity.java  RebootWaitingWorker.java  SettingActivity.java  ShowMsg.java
ePOS2_Printer/app/src/main/res/layout/: activity_firmwareupdate.xml  activity_main.xml  activity_printersetting_ex.xml
ePOS2_Printer/app/src/main/res/values/: strings.xml  styles.xml
ePOS2_Printer/gradle/wrapper/: gradle-wrapper.properties
